name:                circular-buffer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SwiftsNamesake/circular-buffer#readme
license:             BSD3
license-file:        LICENSE.md
author:              Jonatan Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           2017 Jonatan Sundqvist
category:            Data Types
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.CircularBuffer
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

test-suite circular-buffer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , circular-buffer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SwiftsNamesake/circular-buffer
